objects/Customer_Satisfaction_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <formula>text( Case__r.Priority )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Speed__c</fullName>
        <label>Contact Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detractor__c</fullName>
        <label>Detractor Suggestions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <label>Follow-Up</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_TAC_Can_Improve__c</fullName>
        <label>How TAC Can Improve</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Customer__c</fullName>
        <label>New Customer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I Don&apos;t Remember</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <label>Overall Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passive__c</fullName>
        <label>Passive Suggestions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Interaction_Rating__c</fullName>
        <label>Previous Interaction Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promoter__c</fullName>
        <label>Promoter Suggestions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAC_Informativeness__c</fullName>
        <label>TAC Informativeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAC_Knowledge__c</fullName>
        <label>TAC Knowledge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAC_Overall__c</fullName>
        <label>TAC Overall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAC_Professionalism__c</fullName>
        <label>TAC Professionalism</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAC_Speed__c</fullName>
        <label>TAC Speed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAC_Success__c</fullName>
        <label>TAC Success</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customer Satisfaction Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Overall_Rating__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Survey</fullName>
        <columns>NAME</columns>
        <columns>Owner__c</columns>
        <columns>Case__c</columns>
        <columns>Contact__c</columns>
        <columns>Overall_Rating__c</columns>
        <columns>Case_Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Promoter__c</columns>
        <columns>How_TAC_Can_Improve__c</columns>
        <columns>Passive__c</columns>
        <columns>Detractor__c</columns>
        <columns>TAC_Overall__c</columns>
        <filterScope>Everything</filterScope>
        <label>CS Customer Sat Surveys</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Customer Satisfaction Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>